HHH-19846 - Drop JUnit 4 usage
org.hibernate.orm.test.jpa.query

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.spi/test/userguide

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.transaction/version/xml

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.criteria - WIP

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.criteria - WIP

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.criteria

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.*

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.lock

Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Drop JUnit 4 usage: org.hibernate.orm.test.jpa.secondarytable

Signed-off-by: Jan Schatteman <jschatte@redhat.com>